Allow multi questions
